syntax = "proto3";
package realtime_proto;

message HttpRealtimeMessage {
  string device_id = 1;
  bytes payload = 2;
}